--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
+    "bp": "astro build && astro preview",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -12,7 +13,16 @@
     "@astrojs/mdx": "^4.3.5",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
+    "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.8",
-    "sharp": "^0.34.3"
+    "daisyui": "^5.1.13",
+    "sharp": "^0.34.3",
+    "tailwindcss": "^4.1.13",
+    "theme-change": "^2.5.0"
+  },
+  "devDependencies": {
+    "prettier": "3.6.2",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.14"
   }
 }
