--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.9",
     "@astrojs/mdx": "^4.3.5",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.8",
-    "daisyui": "^5.1.13",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.13",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
+    "@astrojs/node": "^9.4.4",
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.14"
