--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@astrojs/mdx": "^4.3.5",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
+    "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.8",
+    "astro-icon": "^1.1.5",
     "sharp": "^0.34.3",
-    "tailwindcss": "^4.1.13",
-    "theme-change": "^2.5.0"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@astrojs/node": "^9.4.4",
