--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.8",
     "astro-icon": "^1.1.5",
+    "gsap": "^3.13.0",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.13"
   },
